5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1865_1648.log
== TEST (2019-07-04 10:20:30) 
-- CODE:
x = array(eval(input("frequencia:")))
a = 0
for i in range(x):
	if(x[i] < 70):
		a  = a + 1 
print(a)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:21:05) 
-- CODE:
x = arrey(eval(input("frequencia:")))
a = 0
for i in range(x):
	if(x[i] < 70):
		a  = a + 1 
print(a)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = arrey(eval(input()))
NameError: name 'arrey' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:21:22) 
-- CODE:
x = array(eval(input("frequencia:")))
a = 0
for i in range(x):
	if(x[i] < 70):
		a  = a + 1 
print(a)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:22:26) 
-- CODE:
from numpy import*
x = array(eval(input("frequencia:")))
a = 0
for i in range(x):
	if(x[i] < 70):
		a  = a + 1 
print(a)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:24:03) 
-- CODE:
from numpy import*
x = array(eval(input("frequencia:")))
a = 0
for i in range(x):
	while(x[i] < 70):
		a  = a + 1 
print(a)


	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:24:39) 
-- CODE:
from numpy import*
x = array(eval(input("frequencia:")))
a = 0
for i in(x):
	while(x[i] < 70):
		a  = a + 1 
print(a)


	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:41) 
-- CODE:
from numpy import*
x = array(eval(input("frequencia:")))
a = 0
for i in(x):
	while(x[i] < 70):
		a  = a + 1 



	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:46:16) 
-- CODE:
from numpy import*
x = array(eval(input("frequencia:")))
a = 0
for i in(x):
	while(x < 70):
		a  = a + 1 



	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:47:20) 
-- CODE:
from numpy import*
x = array(eval(input("frequencia:")))
i = 0
for i in(x):
	while(x[i] < 70):
		i  = i + 1 



	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
